applications/todo-redhat/overlays/dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-redhat
  namespace: dev
spec:
  replicas: 1
