applications/todo-redhat/overlays/dev/route-patch.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: todo-redhat

spec:
  host: todo-dev.hclareth.space
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect

    externalCertificate:
      name: todo-redhat-dev-tls
